[package]
name = "nets-server"
version = "0.1.0"
authors = ["Nikolay Amiantov <ab@fmap.me>"]

[dependencies]
nix = { path = "../../cgate/deps/nix-rust", version = "^0.5.0-pre" }
libc = "^0.2.7"
regex = "^0.1.46"
lazy_static = "^0.1.15"
time = "^0.1.34"
tempfile = "^2.0.1"
tempdir = "^0.3.4"
rustc-serialize = "0.3.16"
